feat: creating teams for events

--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -88,6 +88,13 @@ components:
       - start_time
       - website_url
       type: object
+    handlers.CreateTeamRequest:
+      properties:
+        name:
+          type: string
+      required:
+      - name
+      type: object
     handlers.NullableEventRole:
       properties:
         assigned_at:
@@ -644,6 +651,28 @@ components:
       required:
       - event_role_type
       - valid
+      type: object
+    sqlc.Team:
+      properties:
+        created_at:
+          type: string
+        event_id:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+        owner_id:
+          type: string
+        updated_at:
+          type: string
+      required:
+      - created_at
+      - event_id
+      - id
+      - name
+      - owner_id
+      - updated_at
       type: object
 externalDocs:
   description: ""
@@ -1366,6 +1395,68 @@ paths:
       summary: Get all staff users for an event
       tags:
       - Event
+  /events/{eventId}/teams:
+    post:
+      description: Creates a new team for a specific event and assigns the creator
+        as the owner.
+      parameters:
+      - description: The authenticated session token/id
+        in: cookie
+        name: sh_session_id
+        required: true
+        schema:
+          type: string
+      - description: The ID of the event
+        in: path
+        name: event_id
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              oneOf:
+              - type: object
+              - $ref: '#/components/schemas/handlers.CreateTeamRequest'
+                description: Team Creation Payload
+                summary: request
+        description: Team Creation Payload
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sqlc.Team'
+          description: A team object
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Bad request: you had request parameters needed for this method.'
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Unauthenticated: Requester is not currently authenticated.'
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Conflict: You already have a team.'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Something went seriously wrong.
+      summary: Create a new team
+      tags:
+      - Team
   /events/{eventId}/teams/me:
     get:
       description: Retrieves the team information and the full list of team members
@@ -1373,7 +1464,7 @@ paths:
       parameters:
       - description: The authenticated session token/id
         in: cookie
-        name: sh_session
+        name: sh_session_id
         required: true
         schema:
           type: string
@@ -1419,7 +1510,7 @@ paths:
       parameters:
       - description: The authenticated session token/id
         in: cookie
-        name: sh_session
+        name: sh_session_id
         required: true
         schema:
           type: string
