--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -1448,19 +1448,6 @@ paths:
       summary: Get all staff users for an event
       tags:
       - Event
-<<<<<<< HEAD
-  /events/{eventId}/users:
-    get:
-      description: Gets all users with any role for the event
-      parameters:
-      - description: Event ID
-        in: path
-        name: eventId
-        required: true
-        schema:
-          format: uuid
-          type: string
-=======
   /events/{eventId}/teams:
     post:
       description: Creates a new team for a specific event and assigns the creator
@@ -1478,14 +1465,10 @@ paths:
         required: true
         schema:
           type: integer
->>>>>>> dev
       requestBody:
         content:
           application/json:
             schema:
-<<<<<<< HEAD
-              type: object
-=======
               oneOf:
               - type: object
               - $ref: '#/components/schemas/handlers.CreateTeamRequest'
@@ -1493,18 +1476,11 @@ paths:
                 summary: request
         description: Team Creation Payload
         required: true
->>>>>>> dev
       responses:
         "200":
           content:
             application/json:
               schema:
-<<<<<<< HEAD
-                items:
-                  $ref: '#/components/schemas/sqlc.GetEventStaffRow'
-                type: array
-          description: OK - Return users
-=======
                 $ref: '#/components/schemas/sqlc.Team'
           description: A team object
         "400":
@@ -1525,18 +1501,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/response.ErrorResponse'
           description: 'Conflict: You already have a team.'
->>>>>>> dev
         "500":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/response.ErrorResponse'
-<<<<<<< HEAD
-          description: 'Server Error: Something went terribly wrong on our end.'
-      summary: Get all users for an event
-      tags:
-      - Event
-=======
           description: Something went seriously wrong.
       summary: Create a new team
       tags:
@@ -1587,6 +1556,40 @@ paths:
         event.
       tags:
       - Team
+  /events/{eventId}/users:
+    get:
+      description: Gets all users with any role for the event
+      parameters:
+      - description: Event ID
+        in: path
+        name: eventId
+        required: true
+        schema:
+          format: uuid
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/sqlc.GetEventStaffRow'
+                type: array
+          description: OK - Return users
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server Error: Something went terribly wrong on our end.'
+      summary: Get all users for an event
+      tags:
+      - Event
   /teams/{teamId}:
     get:
       description: Retrieves the team information and the full list of team members
@@ -1632,7 +1635,6 @@ paths:
       summary: Get a team and its members by team id.
       tags:
       - Team
->>>>>>> dev
   /users:
     get:
       description: Get or search for users by name or email. If no search term is
