--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@internationalized/date": "^3.8.2",
     "@react-aria/form": "^3.1.0",
     "@react-stately/form": "^3.2.0",
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.75.5",
@@ -49,6 +50,7 @@
     "react-aria-components": "^1.10.1",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
+    "react-pdf": "^10.2.0",
     "react-select": "^5.10.2",
     "react-stately": "^3.39.0",
     "react-toastify": "^11.0.5",
