feat: application navigation logic

--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -206,6 +206,14 @@ components:
       - error
       - message
       type: object
+    services.ApplicationReviewStatus:
+      enum:
+      - in_progress
+      - completed
+      type: string
+      x-enum-varnames:
+      - ApplicationReviewStatusInProgress
+      - ApplicationReviewStatusCompleted
     services.ApplicationStatistics:
       properties:
         age_stats:
@@ -236,6 +244,16 @@ components:
       - race_stats
       - school_stats
       - status_stats
+      type: object
+    services.AssignedApplication:
+      properties:
+        status:
+          $ref: '#/components/schemas/services.ApplicationReviewStatus'
+        user_id:
+          type: string
+      required:
+      - status
+      - user_id
       type: object
     services.EventOverview:
       properties:
@@ -1150,7 +1168,7 @@ paths:
           type: string
       - description: The authenticated session token/id
         in: cookie
-        name: sh_session
+        name: sh_session_id
         required: true
         schema:
           type: string
@@ -1181,7 +1199,52 @@ paths:
               schema:
                 $ref: '#/components/schemas/response.ErrorResponse'
           description: 'Server Error: error retrieving application"\'
-      summary: Get Application By User and Event ID
+      summary: Get Current User's Application by Event ID
+      tags:
+      - Application
+  /events/{eventId}/application/{applicationId}:
+    get:
+      description: Retrieves an application using the user id and event id primary
+        keys and unique constraints. Only accessible by event staff and admins.
+      parameters:
+      - description: Event ID
+        in: path
+        name: eventId
+        required: true
+        schema:
+          type: string
+      - description: Application ID (Technically user ID)
+        in: path
+        name: applicationId
+        required: true
+        schema:
+          type: string
+      - description: The authenticated session token/id
+        in: cookie
+        name: sh_session
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sqlc.Application'
+          description: 'OK: An application was found'
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Bad request/Malformed request.
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server Error: error retrieving assigned application'
+      summary: Get an application based on a user id and event id.
       tags:
       - Application
   /events/{eventId}/application/assign-reviewers:
@@ -1228,15 +1291,9 @@ paths:
       - Application
   /events/{eventId}/application/assigned:
     get:
-      description: Search through the `applications` and retrieves the one with matching
-        assigned reviewer user id to the current user id.
+      description: Retrieves assigned applications and their review progress for the
+        authenticated reviewer.
       parameters:
-      - description: The user ID
-        in: query
-        name: userId
-        required: true
-        schema:
-          type: string
       - description: Event ID
         in: path
         name: eventId
@@ -1245,7 +1302,7 @@ paths:
           type: string
       - description: The authenticated session token/id
         in: cookie
-        name: sh_session
+        name: sh_session_id
         required: true
         schema:
           type: string
@@ -1254,10 +1311,9 @@ paths:
           content:
             application/json:
               schema:
-                oneOf:
-                - $ref: '#/components/schemas/sqlc.Application'
-                - additionalProperties: {}
-                  type: object
+                items:
+                  $ref: '#/components/schemas/services.AssignedApplication'
+                type: array
           description: 'OK: An application was found'
         "400":
           content:
@@ -1271,7 +1327,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/response.ErrorResponse'
           description: 'Server Error: error retrieving assigned application'
-      summary: Get a staff's assigned application for reviewing
+      summary: Get Assigned Application IDs and Progress
       tags:
       - Application
   /events/{eventId}/application/download-resume:
